edited main page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Codehelper</title>
+		<title>Bigmancozmo's Things</title>
 	</head>
 	<body>
-		<p>HI.</p>
+		<h1>Bigmancozmo's Things</h1>
 	</body>
 </html>
