--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>Bigmancozmo's Things</title>
 	</head>
 	<body>
-		<h1>Bigmancozmo's Things</h1>
+		<div class="wrapper">
+			<h1>Bigmancozmo's Things</h1>
+			<a href="/codehelper/">Codehelper</a>
+		</div>
 	</body>
 </html>
