--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<h1>Welcome to CodeHelper.</h1>
+			<h1 class="welcome">Welcome to CodeHelper.</h1>
 		</div>
 	</body>
 </html>
