Linked the stylesheet
Linked "style.css" to the page.

--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Codehelper</title>
 	</head>
 	<body>
 		<div class="wrapper">
-			<h1 class="welcome">Welcome to CodeHelper.</h1>
+			<span class="welcome-to-codehelper">Welcome to CodeHelper.</span>
+			<span class=""></span>
 		</div>
 	</body>
 </html>
