Modified "CodeHelper" redirect
Added "Your Personal Code Helper" to CodeHelper

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="wrapper">
 			<h1>Bigmancozmo's Things</h1>
-			<a href="/codehelper/">Codehelper</a>
+			<a href="/codehelper/">Codehelper - Your Personal Code Helper</a>
 		</div>
 	</body>
 </html>
