--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="../styles/text.css">
 		<title>Codehelper</title>
 	</head>
 	<body>
 		<div class="wrapper">
-			<span class="welcome-to-codehelper">Welcome to CodeHelper.</span>
-			<span class=""></span>
+			<div class="top-logo-slogan">
+				<span class="title-big-50">Welcome to CodeHelper</span>
+				<br>
+				<span class="slogan">Your personal code helper</span>
+			</div>
 		</div>
 	</body>
 </html>
