--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="styles/text.css">
 		<title>Bigmancozmo's Things</title>
 	</head>
 	<body>
 		<div class="wrapper">
-			<h1>Bigmancozmo's Things</h1>
-			<a href="/codehelper/">Codehelper - Your Personal Code Helper</a>
+			<div class="featured">
+				<span class="title-big-50">Bigmancozmo's Things</span>
+				<br>
+				<a href="/codehelper/">Codehelper - Your Personal Code Helper</a>
+			</div>
 		</div>
 	</body>
 </html>
