HUGE UPDATE - Added project save system
The project save system is still a work in progress, so don't expect it to be finished!

--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../styles/text.css">
-		<title>Codehelper</title>
+		<title>CodeHelper</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -10,6 +10,9 @@
 				<span class="title-big-50">Welcome to CodeHelper</span>
 				<br>
 				<span class="slogan">Your personal code helper</span>
+			</div>
+			<div class="codehelper-things">
+				<a href="../code_editor/">Code Editor</a>
 			</div>
 		</div>
 	</body>
