--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div class="featured">
 				<span class="title-big-50">Bigmancozmo's Things</span>
 				<br>
-				<a href="/codehelper/">Codehelper - Your Personal Code Helper</a>
+				<a href="/codehelper/">CodeHelper - Your Personal Code Helper</a>
 			</div>
 		</div>
 	</body>
