Moved editor location

--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -12,7 +12,7 @@
 				<span class="slogan">Your personal code helper</span>
 			</div>
 			<div class="codehelper-things">
-				<a href="../code_editor/">Code Editor</a>
+				<a href="./editor/">Code Editor</a>
 			</div>
 		</div>
 	</body>
