--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<div class="top-logo-slogan">
+			<div class="top-logo">
 				<span class="title-big-50">Welcome to CodeHelper</span>
 				<br>
-				<span class="slogan">Your personal code helper</span>
+				<span class="title">Your personal code helper</span>
 			</div>
 			<div class="codehelper-things">
 				<a href="./editor/">Code Editor</a>
