--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -14,6 +14,9 @@
 			<div class="codehelper-things">
 				<a href="./editor/">Code Editor</a>
 			</div>
+			<div class="created-by-bmc">
+				<span class="made-by-bmc"></span>
+			</div>
 		</div>
 	</body>
 </html>
