--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -15,7 +15,8 @@
 				<a href="./editor/">Code Editor</a>
 			</div>
 			<div class="created-by-bmc">
-				<span class="made-by-bmc"></span>
+				<span class="made-by-bmc">Created by Bigmancozmo</span>
+				<img src="../../../img/bmc_logo.jpg">
 			</div>
 		</div>
 	</body>
