--- a/codehelper/editor/index.html
+++ b/codehelper/editor/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../styles/text.css">
+		<meta charset="utf-8">
 		<title>CodeHelper - In Browser Code Editor</title>
 	</head>
 	<body>
