Fix image location

--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="created-by-bmc">
 				<span class="made-by-bmc">Created by Bigmancozmo</span>
-				<img src="../../../img/bmc_logo.jpg">
+				<img src="../../img/bmc_logo.jpg">
 			</div>
 		</div>
 	</body>
