--- a/codehelper/index.html
+++ b/codehelper/index.html
@@ -4,6 +4,15 @@
 		<link rel="stylesheet" type="text/css" href="../styles/text.css">
 		<meta charset="utf-8">
 		<title>CodeHelper</title>
+		<style type="text/css">
+			.image-bmc{
+				border-radius: 50px;
+				width: 50px;
+			}
+			.clickable{
+				cursor: pointer;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -17,7 +26,8 @@
 			</div>
 			<div class="created-by-bmc">
 				<span class="made-by-bmc">Created by Bigmancozmo</span>
-				<img src="../../img/bmc_logo.jpg">
+				<br>
+				<a href="https://bigmancozmo.github.io" class="clickable"><img src="../img/bmc_logo.jpg" class="image-bmc"></a>
 			</div>
 		</div>
 	</body>
